메인화면 데이터 연동
Signed-off-by: KangSeyun <dcp.k953@gmail.com>

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -33,11 +33,7 @@
           </li> -->
         </ul>
       </div>
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
+      {% for item in ad %}
       <div class="gallery-item " data-width="1" data-height="1">
         <!-- START PREVIEW -->
         <img src="{% static 'assets/img/gallery/4.jpg' %}" alt="" class="image-responsive-height">
@@ -47,7 +43,7 @@
           <div class="overlayer-wrapper item-info ">
             <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
               <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
+                <p class="pull-left bold text-white fs-14 p-t-10">{{ item.title}}</p>
                 <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
                 <div class="clearfix"></div>
               </div>
@@ -75,222 +71,7 @@
         </div>
         <!-- END PRODUCT OVERLAY DESCRIPTION -->
       </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/5.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/6.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/7.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/8.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="assets/img/profiles/avatar.jpg" data-src="assets/img/profiles/avatar.jpg" data-src-retina="assets/img/profiles/avatar2x.jpg" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/9.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
+      {% endfor %}
     </div>
     <!-- END CATEGORY -->
   </div>
