--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -44,7 +44,7 @@
             <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
               <div class="">
                 <p class="pull-left bold text-white fs-14 p-t-10">{{ item.title}}</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
+                <h5 class="pull-right semi-bold text-white font-montserrat bold">₩{{item.budget}}</h5>
                 <div class="clearfix"></div>
               </div>
               <div class="m-t-10">
