--- a/api/templates/my/my_base.html
+++ b/api/templates/my/my_base.html
@@ -32,7 +32,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="{% url 'ad_status' %}">
                   <span class="title"><i class="fa fa-list"></i> 광고 현황</span>
                   <span class="badge pull-right">1</span>
                 </a>
