--- a/api/templates/my/ad_status.html
+++ b/api/templates/my/ad_status.html
@@ -13,7 +13,7 @@
         </thead>
         <tbody>
             {% for item in ad %}
-            <tr>
+            <tr data="{{item.id}}">
                 <td>진행중</td>
                 <td>{{item.category}}</td>
                 <td>{{item.title}}</td>
