--- a/api/templates/my/my_base.html
+++ b/api/templates/my/my_base.html
@@ -17,7 +17,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="{% url 'trade' %}">
                   <span class="title"><i class="pg-sent"></i> 거래</span>
                   <span class="badge pull-right">1</span>
                 </a>
