add : 크리에이터 기본 페이지 추가

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -53,7 +53,7 @@
         <!-- BEGIN SIDEBAR MENU ITEMS-->
         <ul class="menu-items">
           <li class="m-t-30 ">
-            <a href="/api/v1/ad/" class="detailed">
+            <a href="/api/v1/resume/" class="detailed">
               <span class="title">크리에이터</span>
               <span class="details">나에게 딱 맞는 광고를 </span>
             </a>
