글작성 맵 추가 및 이미지
Signed-off-by: KangSeyun <dcp.k953@gmail.com>

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -916,8 +916,9 @@
     <!-- END OVERLAY -->
 
   </body>
-
   <!-- BEGIN VENDOR JS -->
+  <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f6022657047c9d35df68e6e874a4be78&libraries=services"></script>  
+  <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>  
   <script src="{% static 'assets/plugins/feather-icons/feather.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/plugins/pace/pace.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/plugins/jquery/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
@@ -946,6 +947,8 @@
   <script src="{% static 'assets/plugins/mapplic/js/jquery.mousewheel.js' %}"></script>
   <script src="{% static 'assets/plugins/mapplic/js/mapplic.js' %}"></script>
   <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
+  <script src="{% static 'javascript/ad_write.js' %}" type="text/javascript"></script>  
+  <script src="{% static 'javascript/daum_map.js' %}" type="text/javascript"></script>    
   <!-- END VENDOR JS -->
   <!-- BEGIN CORE TEMPLATE JS -->
   <script src="{% static 'pages/js/pages.min.js' %}"></script>
