change : 크레이어터 리스트 뷰 커스터마이징

--- a/api/templates/resume_list.html
+++ b/api/templates/resume_list.html
@@ -17,286 +17,118 @@
           <!-- START BREADCRUMB -->
           <ol class="breadcrumb sm-p-b-5">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active">Ad list</li>
+            <li class="breadcrumb-item active">Creator list</li>
           </ol>
         </div>
       </div>
     </div>
     <!-- END JUMBOTRON -->
 
-    <!-- START CATEGORY -->
-    <div class="gallery">
-      <div class="gallery-filters p-t-20 p-b-10">
-        <ul class="list-inline text-right">
-          <li class="hint-text">Sort by: </li>
-          <li><a href="#" class="active text-master p-r-5 p-l-5">Name</a></li>
-          <li><a href="#" class="text-master hint-text p-r-5 p-l-5">Views</a></li>
-          <li><a href="#" class="text-master hint-text p-r-5 p-l-5">Cost</a></li>
-          <li>
-            <button class="btn btn-primary m-l-10" data-toggle="filters">More filters</button>
-          </li>
-        </ul>
-      </div>
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/4.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
+
+    <div class="row">
+
+      <!-- START CREATOR LIST -->
+      <div class="col-lg-4 sm-no-padding">
+        <div class="card card-transparent">
+          <div class="card-block no-padding">
+            <div id="card-advance" class="card card-default">
+              <div class="card-header  ">
+                <div class="card-title">Creator Title
+                </div>
+                <div class="card-controls">
+                  <ul>
+                    <li>
+                      <div class="dropdown">
+                        <a id="card-settings" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
+                          <i class="card-icon card-icon-settings "></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="card-settings">
+                          <a href="#" class="dropdown-item">API</a>
+                          <a href="#" class="dropdown-item">Preferences</a>
+                          <a href="#" class="dropdown-item">About</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li><a href="#" class="card-close" data-toggle="close"><i
+	    								class="card-icon card-icon-close"></i></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
+              <div class="card-block">
+                <h3> <span class="semi-bold">40만 팔로워 페북스타</span> </h3>
+                <p>안녕하세요. 후기광고 열심히 할 수 있습니다! 연락주세요~</p>
+                <br>
+                <div>
+                  <div class="profile-img-wrapper m-t-5 inline">
+                    <img width="35" height="35" src="{% static 'assets/img/profiles/avatar_small2x.jpg' %}">
+                    <div class="chat-status available">
+                    </div>
+                  </div>
+                  <div class="inline m-l-10">
+                    <p class="small hint-text m-t-5">김경이
+                      <br>youtube</p>
+                  </div>
                 </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
               </div>
             </div>
           </div>
         </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
       </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/5.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
+      <!-- END CREATOR -->
+
+      <!-- START CREATOR LIST -->
+      <div class="col-lg-4 sm-no-padding">
+        <div class="card card-transparent">
+          <div class="card-block no-padding">
+            <div id="card-advance" class="card card-default">
+              <div class="card-header  ">
+                <div class="card-title">Creator Title
+                </div>
+                <div class="card-controls">
+                  <ul>
+                    <li>
+                      <div class="dropdown">
+                        <a id="card-settings" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
+                          <i class="card-icon card-icon-settings "></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="card-settings">
+                          <a href="#" class="dropdown-item">API</a>
+                          <a href="#" class="dropdown-item">Preferences</a>
+                          <a href="#" class="dropdown-item">About</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li><a href="#" class="card-close" data-toggle="close"><i
+	    								class="card-icon card-icon-close"></i></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
+              <div class="card-block">
+                <h3> <span class="semi-bold">20만뷰 유투버</span> </h3>
+                <p>안녕하세요. 영상광고 열심히 할 수 있습니다! 연락주세요~</p>
+                <br>
+                <div>
+                  <div class="profile-img-wrapper m-t-5 inline">
+                    <img width="35" height="35" src="{% static 'assets/img/profiles/avatar_small2x.jpg' %}">
+                    <div class="chat-status available">
+                    </div>
+                  </div>
+                  <div class="inline m-l-10">
+                    <p class="small hint-text m-t-5">김경이
+                      <br>for 유투버</p>
+                  </div>
                 </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
               </div>
             </div>
           </div>
         </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
       </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/6.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/7.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/8.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="assets/img/profiles/avatar.jpg" data-src="assets/img/profiles/avatar.jpg" data-src-retina="assets/img/profiles/avatar2x.jpg" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
-      <!-- START GALLERY ITEM -->
-      <!--
-            FOR DEMO PURPOSES, FIRST GALLERY ITEM (.first) IS HIDDEN
-            FOR SCREENS <920px. PLEASE REMOVE THE CLASS 'first' WHEN YOU IMPLEMENT
-        -->
-      <div class="gallery-item " data-width="1" data-height="1">
-        <!-- START PREVIEW -->
-        <img src="{% static 'assets/img/gallery/9.jpg' %}" alt="" class="image-responsive-height">
-        <!-- END PREVIEW -->
-        <!-- START ITEM OVERLAY DESCRIPTION -->
-        <div class="overlayer bottom-left full-width">
-          <div class="overlayer-wrapper item-info ">
-            <div class="gradient-grey p-l-20 p-r-20 p-t-20 p-b-5">
-              <div class="">
-                <p class="pull-left bold text-white fs-14 p-t-10">Happy Ninja</p>
-                <h5 class="pull-right semi-bold text-white font-montserrat bold">$25.00</h5>
-                <div class="clearfix"></div>
-              </div>
-              <div class="m-t-10">
-                <div class="thumbnail-wrapper d32 circular m-t-5">
-                  <img width="40" height="40" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
-                </div>
-                <div class="inline m-l-10">
-                  <p class="no-margin text-white fs-12">Designed by Alex Nester</p>
-                  <p class="rating">
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star rated"></i>
-                    <i class="fa fa-star"></i>
-                  </p>
-                </div>
-                <div class="pull-right m-t-10">
-                  <button class="btn btn-white btn-xs btn-mini bold fs-14" type="button">+</button>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END PRODUCT OVERLAY DESCRIPTION -->
-      </div>
-      <!-- END GALLERY ITEM -->
+      <!-- END CREATOR -->
+
     </div>
-    <!-- END CATEGORY -->
+
   </div>
   <!-- START DIALOG -->
   <div id="itemDetails" class="dialog item-details">
