--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <!-- END JUMBOTRON -->
-    <div class="row">
+    <div class="m-l-10 m-t-10 m-r-10 row">
     <div class="col-lg-12 sm-no-padding">
       <div class="card card-transparent">
         <div class="card-block no-padding">
