--- a/api/templates/resume_list.html
+++ b/api/templates/resume_list.html
@@ -25,7 +25,7 @@
     <!-- END JUMBOTRON -->
 
 
-    <div class="row">
+    <div class="m-l-10 m-t-10 m-r-10 row">
 
       <!-- START CREATOR LIST -->
       <div class="col-lg-4 sm-no-padding">
