--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -24,7 +24,7 @@
     </div>
     <!-- END JUMBOTRON -->
 
-    <div class="m-l-10 m-t-10 m-r-10 row">
+    <div class="m-l-10 m-t-10 m-r-10 row" onclick="location.href='/api/v1/ad/detail/';">
       <div class="col-lg-12 sm-no-padding">
         <div class="card card-transparent">
           <div class="card-block no-padding">
